eyetracking_ros_ws/log/build_2024-02-13_15-18-29/rgbd_camera/stderr.log
  File "/home/locobot/SU_Robotics/ros_ws/install/rgbd_camera/lib/python3.8/site-packages/rgbd_camera/depth_node.py", line 29
    print(param.shape[:2]:
                         ^
SyntaxError: invalid syntax

